packages/language/grammar/test/corpus/error.txt
==================
Unclosed resource brace
==================

task broken {
  value = "test"

---

(document
  (resource
    (identifier
      (bare_identifier))
    (attribute
      (bare_identifier)
      (expression
        (literal
          (string_literal))))
    (MISSING "}")))

==================
Unclosed string literal
==================

task bad {
  description = "unclosed
}

---

(document
  (ERROR
    (identifier
      (bare_identifier))
    (bare_identifier)))

==================
ERROR: Missing attribute value
==================

task incomplete {
  key = 
}

---

(document
  (resource
    (identifier
      (bare_identifier))
    (attribute
      (bare_identifier)
      (expression
        (reference
          (MISSING bare_identifier))))))

==================
ERROR: Invalid attribute syntax no key
==================

task no_key {
  = "value"
}

---

(document
  (ERROR
    (ERROR
      (identifier
        (bare_identifier)))
    (identifier
      (quoted_identifier))))

==================
ERROR: Mismatched quotes in identifier
==================

task "oops {
}

---

(document
  (ERROR))

==================
ERROR: Missing equals sign
==================

task missing_eq {
  key "value"
}

---

(document
  (ERROR
    (ERROR
      (identifier
        (bare_identifier))
      (bare_identifier))
    (identifier
      (quoted_identifier))))

==================
ERROR: Incomplete array
==================

task partial {
  deps = [A, B
}

---

(document
  (resource
    (identifier
      (bare_identifier))
    (attribute
      (bare_identifier)
      (expression
        (array
          (expression
            (reference
              (bare_identifier)))
          (expression
            (reference
              (bare_identifier)))
          (MISSING "]"))))))

==================
ERROR: Invalid token in resource body
==================

task invalid {
  @@@
  valid = "test"
}

---

(document
  (ERROR
    (ERROR
      (identifier
        (bare_identifier))
      (UNEXPECTED '@'))
    (identifier
      (quoted_identifier))))

==================
ERROR: Multiple errors in document
==================

task err1 {
  = "no key"
}

task err2 {
  unclosed = "string

task good {
  value = 123
}

---

(document
  (ERROR
    (ERROR
      (identifier
        (bare_identifier)))
    (identifier
      (quoted_identifier))
    (identifier
      (bare_identifier))
    (bare_identifier)))

==================
ERROR: Unclosed array with nested errors
==================

task nested_err {
  list = ["str1", , "str2"
}

---

(document
  (resource
    (identifier
      (bare_identifier))
    (attribute
      (bare_identifier)
      (expression
        (array
          (expression
            (literal
              (string_literal)))
          (ERROR)
          (expression
            (literal
              (string_literal)))
          (MISSING "]"))))))
